client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-name
spec:
  replicas: 1
  template:
    metadata:
      labels:
        label-key : label-value  
    spec:
      containers:
        - name: deploment-container-name
          image: andresnboza/reload-app-client
          imagePullPolicy: Always
          ports:
          - containerPort: 80
