server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reload-app-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: reload-app-server
  template:
    metadata:
      labels:
        app: reload-app-server
    spec:
      containers:
      - name: reload-app-server
        image: andresnboza/reload-app-server
        ports:
          - containerPort: 3000
