client-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service-label-key: reload-app-client-service 
  name: reload-app-client-service
spec:
  type: NodePort
  ports:
  - name: reload-app-client-port
    port: 80
    protocol: TCP
  selector:
    name: reload-app-client
---
apiVersion: v1
kind: Service
metadata:
  name: reload-app-client-service-external
  namespace: kube-system
spec:
  type: ExternalName
  externalName: reload-app-client-service.default.svc.cluster.local
