client.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reload-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reload-client
  template:
    metadata:
      labels:
        app: reload-client
    spec:
      imagePullSecrets:
        - name: aws-registry  
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
        - name: reload-client
          image: andresnboza/reload-app-client
          resources:
            limits:
              cpu: 250m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 512Mi
          ports:
            - containerPort: 3000
              name: reload-client       

---
apiVersion: v1
kind: Service
metadata:
  name: reload-client
spec:
  type: ClusterIP
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 3000
  selector:
    app: reload-client
