server.yaml
apiVersion: v1
kind: Service
metadata:
  name: reload-app-server-service
  labels:
    app: reload-app-server
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: reload-app-server
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: reload-app-server-deployment
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector: 
    matchLabels: 
      app: reload-app-server
  replicas: 3
  template:
    metadata:
      labels:
        app: reload-app-server
    spec:
      containers:
      - name: reload-app-server
        image: andresnboza/reload-app-server
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 3  
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
