ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reload-app-client-ingress
  namespace: kube-system
spec:
  ingressClassName: nginx
  rules:
    - host: reloadapp.cr.146.190.0.144.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reload-app-client-service
                port:
                  number: 80
