nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reload-app-nginx
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reload-app-nginx
  template:
    metadata:
      labels:
        app: reload-app-nginx
    spec:
      containers:
      - name: reload-app-nginx
        image: andresnboza/reload-app-nginx
        ports:
          - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reload-app-nginx
  namespace: kube-system
spec:
  ingressClassName: nginx
  rules:
    - host: reloadapp.cr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reload-app-nginx
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: reload-app-nginx
  namespace: kube-system
spec:
  type: ExternalName
  externalName: reload-app-nginx.default.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: reload-app-nginx
  namespace: default
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: reload-app-nginx
---
